[bdist_wheel]
universal=1

[metadata]
description-file = README.rst
license_file = LICENSE

[flake8]
builtins = __path__
max-line-length = 100

[pycodestyle]
max-line-length = 100

[coverage:run]
branch = True
source =
    pluginlib

[coverage:report]
exclude_lines =
	pragma: no cover

[build_sphinx]
source-dir = doc
build-dir = build/doc
all_files = True
fresh-env = True

[aliases]
spelling=build_sphinx --builder spelling
html=build_sphinx --builder html

[doc8]
max-line-length=100
